# agent_app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start_debug.sh  test_diagnostic_flow.py  test_graph_flow.py  test_mcp_tool.py  test_streamlit.py
changeLog/: CLEANUP_SUMMARY.md  DEBUGGING_SUMMARY.md  FIX_SUMMARY.md  FLOW_ANALYSIS.md  MCP_AUTO_FLOW_FIX.md  MCP_INTEGRATION_COMPLETE.md  MCP_INTEGRATION_SUMMARY.md  MCP_TOOL_INTEGRATION.md  ORGANIZATION_COMPLETE.md  README.md  README_MCP_INTEGRATION.md
src/agent_app/: logging_conf.py  settings.py
src/agent_app/agents/: __init__.py  base.py  collector.py  executor.py  planner.py  validator.py
src/agent_app/frontend/: ui.py
src/agent_app/graph/: __init__.py  build.py  checkpoints.py  constants.py  routing.py  schemas.py  state.py
src/agent_app/knowledge/: __init__.py  loader.py  registry.py
src/agent_app/knowledge/templates/: sop_diagnostic.yaml
src/agent_app/runtime/: cli.py  server.py
src/agent_app/tools/: __init__.py  mcp_client.py
